# mcp-financial-tools-server

./: .env.example  README.md
mcp-financial-tools-server/: README.md  claude_desktop_config.example.json  pyproject.toml
mcp-financial-tools-server/src/tools/: forecasting.py
src/server/: main.py
src/tools/: financial_ratios.py  kpi_query.py
tests/: test_tools.py
