[project]
name = "mcp-financial-tools-server"
version = "0.1.0"
description = "MCP Server that exposes financial analysis tools for LLM agents — ratios, KPIs, cashflow, forecasting, anomaly detection."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "psycopg2-binary>=2.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "prophet>=1.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.8",
]

[project.scripts]
mcp-financial = "src.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
